<resources>
    <string name="app_name">Mandi</string>
    <string name="plant">Plant</string>
    <string name="streak">Streak</string>
    <string name="done">Done</string>
    <string name="delete">Delete</string>
    <string name="reset">Reset</string>
    <string name="today">Today</string>
    <string name="days_ago">%1$ddays ago</string>
    <string name="no_record">No Record</string>
    <string name="yesterday">Yesterday</string>
    <string name="title_new_mandi">New Mandi</string>
    <string name="hint_new_mandi_title">Type your Mandi here for daily plant</string>
    <string name="hint_new_mandi_desc">Type more information of Mandi or your memo</string>
    <string name="desc_plant">Plant on Mandi!\nTake a picture of what you did today. </string>

    <string name="content_desc_plant">Plant</string>
    <string name="content_desc_close">Close</string>
    <string name="content_desc_flash">Flash</string>
    <string name="content_desc_flip">Flip</string>
    <string name="content_desc_capture">Capture</string>
    <string name="content_desc_planted_image">Planted Image</string>
</resources>