<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="presenter"
            type="com.rkg.mandi.presentation.binding.DataBindingPresenter" />

        <variable
            name="item"
            type="com.rkg.mandi.presentation.model.MainItemModel.MandiItemModel" />
    </data>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/container"
        style="@style/MandiCardView"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_marginHorizontal="16dp"
        android:onClick="@{(view) -> presenter.onClick(view, item)}"
        android:onLongClick="@{(view) -> presenter.onLongClick(view, item)}">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/containerLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvTitle"
                style="@style/Headline2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:text="@{item.title}"
                app:layout_constraintBottom_toTopOf="@id/tvDateUpdated"
                app:layout_constraintEnd_toStartOf="@id/tvDescStreak"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_chainStyle="spread"
                tools:text="Title" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvDateUpdated"
                style="@style/Subtitle3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginBottom="8dp"
                app:lastUpdatedTime="@{item.lastUpdated}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvTitle"
                tools:text="Yesterday" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvDayStreak"
                style="@style/Body1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toTopOf="@id/tvDescStreak"
                app:layout_constraintEnd_toEndOf="@id/tvDescStreak"
                app:layout_constraintStart_toStartOf="@id/tvDescStreak"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_chainStyle="packed"
                app:streakDay="@{item.streakStarted}"
                tools:text="10" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvDescStreak"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:text="@string/streak"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/btnPlant"
                app:layout_constraintTop_toBottomOf="@id/tvDayStreak" />

            <ImageView
                android:id="@+id/btnPlant"
                android:layout_width="64dp"
                android:layout_height="0dp"
                android:background="@android:color/holo_blue_bright"
                android:clickable="true"
                android:contentDescription="@string/content_desc_plant"
                android:focusable="true"
                android:onClick="@{(view) -> presenter.onClick(view, item.plantTap)}"
                android:scaleType="centerInside"
                android:src="@drawable/ic_add"
                app:isInvisible="@{item.updated}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/ivPlanted"
                android:layout_width="64dp"
                android:layout_height="0dp"
                android:background="@color/gray20"
                android:contentDescription="@string/content_desc_planted_image"
                android:scaleType="center"
                app:isVisible="@{item.updated}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:visibility="gone" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>
</layout>